--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <header>
-        <img src="C:\Users\wwwar\OneDrive\Pictures\LOGO_DNP.jpg" alt="LOGO_DNP">
+        <img src="LOGO_DNP.jpg" alt="LOGO_DNP">
         <h1>DN Polytechnic Meerut</h1>
     </header>
     <nav>
